# glaciallake

./: .gitignore  Glacial Lake.ipynb  README.md  dataset_mask.py  datasetgeneration.py  example.py  glacial_kmeans.ipynb  glaciallakelandsat.ipynb  glaciallakemodel.ipynb  glacialscales.csv  graphreator.py  metrics.py  model copy.py  model.py  pyproject.toml  unetmodel.py
backend/: backend.py
frontend/: package.json
frontend/src/: App.css  App.js  Toast.js
notebooks/: glacial_kmeans2.ipynb  glacialcomponent.ipynb  glaciallake_sentinel2.ipynb  glaciallake_sentinel2v2.ipynb
segmentation/: kmeans.py
