[tool.poetry]
name = "glaciallake"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>", "waterlulu12 <aatishshrestha123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
geemap = "^0.32.0"
mss = "^9.0.1"
ee = "0.2"
tensorflow = "^2.16.1"
torch = "^2.2.2"
pygithub = "^2.3.0"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
torchmetrics = "^1.3.2"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
